# AI-Workflow

./: .env.example  .env.production.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
ai-workflow-service/: Dockerfile  README.md  pyproject.toml
ai-workflow-service/app/: debug_session_log.py  main.py
ai-workflow-service/app/clients/: analytics_client.py  backend_chat_client.py  base.py  chat_service_client.py  context_builder_client.py  intent_parser_client.py  mock_backend_chat_client.py  response_agent_client.py
ai-workflow-service/app/core/: config.py  errors.py
ai-workflow-service/app/orchestrator/: clarification_handler.py  workflow_errors.py  workflow_orchestrator.py  workflow_state.py  workflow_steps.py
ai-workflow-service/app/persistence/: db.py  models.py  repositories.py
ai-workflow-service/app/queue/: consumer.py  message.py  producer.py  rabbit_consumer.py  rabbit_producer.py  rabbitmq.py  result_builder.py  result_publisher.py  retry_policy.py  schemas.py  workflow_job_log.py
ai-workflow-service/app/schemas/: backend_chat.py  service_contracts.py  workflow_debug_result.py  workflow_enqueue_response.py  workflow_result.py  workflow_result_message.py  workflow_run_request.py  workflow_status.py  workflow_task.py
ai-workflow-service/app/workflow/: clarification.py  debug_collector.py  debug_runner.py  deps.py  graph.py  nodes.py  orchestrator.py  routing.py  state.py  statuses.py
ai-workflow-service/tests/: conftest.py  test_clarification_flow.py  test_consumer_message_parsing.py  test_health.py  test_pipeline_no_clarification.py  test_service_clients.py  test_workflow_debug_runner.py  test_workflow_failure.py  test_workflow_http.py  test_workflow_orchestrator.py  test_workflow_result_message.py  test_workflow_result_publisher.py
llm-intent-parser-service/: .env.example  Dockerfile  README.md  pyproject.toml
llm-intent-parser-service/app/: main.py
llm-intent-parser-service/app/core/: config.py  errors.py
llm-intent-parser-service/app/llm/: base.py  (+7 more)
llm-intent-parser-service/tests/: conftest.py  scenario_helpers.py  test_boundaries.py  test_category_normalizer.py  test_clarification_parsing.py  test_contract_validation.py  test_health.py  test_intent_endpoint.py  test_intent_llm_integration.py  test_intent_parser_service.py  test_intent_prompt.py  test_intent_scenarios.py  test_json_parser.py  test_message_hints.py  test_service_errors.py
(+217 files in other folders)
