[project]
name = "ai-workflow-service"
version = "0.1.0"
description = "AI workflow orchestrator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.0.0",
    "langgraph>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "shared-contracts",
    "shared-http",
]

[tool.uv.sources]
shared-contracts = { path = "../packages/shared_contracts", editable = true }
shared-http = { path = "../packages/shared_http", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
