[project]
name = "llm-intent-parser-service"
version = "0.1.0"
description = "LLM intent parser"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "shared-contracts",
]

[tool.uv.sources]
shared-contracts = { path = "../packages/shared_contracts", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: integration tests requiring external services",
    "llm: tests requiring a real LLM provider",
]

[tool.ruff]
line-length = 100
target-version = "py312"
